phase-2/generated/modelicaParser.cpp

// Generated from modelica.g4 by ANTLR 4.7.2


#include "modelicaVisitor.h"

#include "modelicaParser.h"


using namespace antlrcpp;
using namespace antlr4;

modelicaParser::modelicaParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

modelicaParser::~modelicaParser() {
  delete _interpreter;
}

std::string modelicaParser::getGrammarFileName() const {
  return "modelica.g4";
}

const std::vector<std::string>& modelicaParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& modelicaParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

modelicaParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<modelicaParser::Function_defContext *> modelicaParser::ProgramContext::function_def() {
  return getRuleContexts<modelicaParser::Function_defContext>();
}

modelicaParser::Function_defContext* modelicaParser::ProgramContext::function_def(size_t i) {
  return getRuleContext<modelicaParser::Function_defContext>(i);
}


size_t modelicaParser::ProgramContext::getRuleIndex() const {
  return modelicaParser::RuleProgram;
}


antlrcpp::Any modelicaParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::ProgramContext* modelicaParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, modelicaParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(131); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(130);
      function_def();
      setState(133); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << modelicaParser::T__0)
      | (1ULL << modelicaParser::T__1)
      | (1ULL << modelicaParser::T__2)
      | (1ULL << modelicaParser::T__3)
      | (1ULL << modelicaParser::T__4))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Data_typeContext ------------------------------------------------------------------

modelicaParser::Data_typeContext::Data_typeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t modelicaParser::Data_typeContext::getRuleIndex() const {
  return modelicaParser::RuleData_type;
}


antlrcpp::Any modelicaParser::Data_typeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitData_type(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Data_typeContext* modelicaParser::data_type() {
  Data_typeContext *_localctx = _tracker.createInstance<Data_typeContext>(_ctx, getState());
  enterRule(_localctx, 2, modelicaParser::RuleData_type);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(135);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << modelicaParser::T__0)
      | (1ULL << modelicaParser::T__1)
      | (1ULL << modelicaParser::T__2)
      | (1ULL << modelicaParser::T__3)
      | (1ULL << modelicaParser::T__4))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentifierContext ------------------------------------------------------------------

modelicaParser::IdentifierContext::IdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* modelicaParser::IdentifierContext::IDENTIFIER() {
  return getToken(modelicaParser::IDENTIFIER, 0);
}


size_t modelicaParser::IdentifierContext::getRuleIndex() const {
  return modelicaParser::RuleIdentifier;
}


antlrcpp::Any modelicaParser::IdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitIdentifier(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::IdentifierContext* modelicaParser::identifier() {
  IdentifierContext *_localctx = _tracker.createInstance<IdentifierContext>(_ctx, getState());
  enterRule(_localctx, 4, modelicaParser::RuleIdentifier);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(137);
    match(modelicaParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StringContext ------------------------------------------------------------------

modelicaParser::StringContext::StringContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> modelicaParser::StringContext::ZERO() {
  return getTokens(modelicaParser::ZERO);
}

tree::TerminalNode* modelicaParser::StringContext::ZERO(size_t i) {
  return getToken(modelicaParser::ZERO, i);
}

std::vector<tree::TerminalNode *> modelicaParser::StringContext::CONSTANT() {
  return getTokens(modelicaParser::CONSTANT);
}

tree::TerminalNode* modelicaParser::StringContext::CONSTANT(size_t i) {
  return getToken(modelicaParser::CONSTANT, i);
}

std::vector<tree::TerminalNode *> modelicaParser::StringContext::IDENTIFIER() {
  return getTokens(modelicaParser::IDENTIFIER);
}

tree::TerminalNode* modelicaParser::StringContext::IDENTIFIER(size_t i) {
  return getToken(modelicaParser::IDENTIFIER, i);
}


size_t modelicaParser::StringContext::getRuleIndex() const {
  return modelicaParser::RuleString;
}


antlrcpp::Any modelicaParser::StringContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitString(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::StringContext* modelicaParser::string() {
  StringContext *_localctx = _tracker.createInstance<StringContext>(_ctx, getState());
  enterRule(_localctx, 6, modelicaParser::RuleString);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(139);
    match(modelicaParser::T__5);
    setState(143);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << modelicaParser::IDENTIFIER)
      | (1ULL << modelicaParser::CONSTANT)
      | (1ULL << modelicaParser::ZERO))) != 0)) {
      setState(140);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << modelicaParser::IDENTIFIER)
        | (1ULL << modelicaParser::CONSTANT)
        | (1ULL << modelicaParser::ZERO))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(145);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(146);
    match(modelicaParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantContext ------------------------------------------------------------------

modelicaParser::ConstantContext::ConstantContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* modelicaParser::ConstantContext::CONSTANT() {
  return getToken(modelicaParser::CONSTANT, 0);
}


size_t modelicaParser::ConstantContext::getRuleIndex() const {
  return modelicaParser::RuleConstant;
}


antlrcpp::Any modelicaParser::ConstantContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitConstant(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::ConstantContext* modelicaParser::constant() {
  ConstantContext *_localctx = _tracker.createInstance<ConstantContext>(_ctx, getState());
  enterRule(_localctx, 8, modelicaParser::RuleConstant);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(148);
    match(modelicaParser::CONSTANT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Unary_opContext ------------------------------------------------------------------

modelicaParser::Unary_opContext::Unary_opContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t modelicaParser::Unary_opContext::getRuleIndex() const {
  return modelicaParser::RuleUnary_op;
}


antlrcpp::Any modelicaParser::Unary_opContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitUnary_op(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Unary_opContext* modelicaParser::unary_op() {
  Unary_opContext *_localctx = _tracker.createInstance<Unary_opContext>(_ctx, getState());
  enterRule(_localctx, 10, modelicaParser::RuleUnary_op);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(150);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << modelicaParser::T__6)
      | (1ULL << modelicaParser::T__7)
      | (1ULL << modelicaParser::T__8)
      | (1ULL << modelicaParser::T__9))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Binary_opContext ------------------------------------------------------------------

modelicaParser::Binary_opContext::Binary_opContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

modelicaParser::Or_bopContext* modelicaParser::Binary_opContext::or_bop() {
  return getRuleContext<modelicaParser::Or_bopContext>(0);
}

modelicaParser::And_bopContext* modelicaParser::Binary_opContext::and_bop() {
  return getRuleContext<modelicaParser::And_bopContext>(0);
}

modelicaParser::Plus_equalContext* modelicaParser::Binary_opContext::plus_equal() {
  return getRuleContext<modelicaParser::Plus_equalContext>(0);
}

modelicaParser::Left_shiftContext* modelicaParser::Binary_opContext::left_shift() {
  return getRuleContext<modelicaParser::Left_shiftContext>(0);
}

modelicaParser::Right_shiftContext* modelicaParser::Binary_opContext::right_shift() {
  return getRuleContext<modelicaParser::Right_shiftContext>(0);
}


size_t modelicaParser::Binary_opContext::getRuleIndex() const {
  return modelicaParser::RuleBinary_op;
}


antlrcpp::Any modelicaParser::Binary_opContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitBinary_op(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Binary_opContext* modelicaParser::binary_op() {
  Binary_opContext *_localctx = _tracker.createInstance<Binary_opContext>(_ctx, getState());
  enterRule(_localctx, 12, modelicaParser::RuleBinary_op);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(157);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case modelicaParser::T__41: {
        setState(152);
        or_bop();
        break;
      }

      case modelicaParser::T__42: {
        setState(153);
        and_bop();
        break;
      }

      case modelicaParser::T__44: {
        setState(154);
        plus_equal();
        break;
      }

      case modelicaParser::T__45: {
        setState(155);
        left_shift();
        break;
      }

      case modelicaParser::T__46: {
        setState(156);
        right_shift();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Binary_minusContext ------------------------------------------------------------------

modelicaParser::Binary_minusContext::Binary_minusContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

modelicaParser::SubtractContext* modelicaParser::Binary_minusContext::subtract() {
  return getRuleContext<modelicaParser::SubtractContext>(0);
}


size_t modelicaParser::Binary_minusContext::getRuleIndex() const {
  return modelicaParser::RuleBinary_minus;
}


antlrcpp::Any modelicaParser::Binary_minusContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitBinary_minus(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Binary_minusContext* modelicaParser::binary_minus() {
  Binary_minusContext *_localctx = _tracker.createInstance<Binary_minusContext>(_ctx, getState());
  enterRule(_localctx, 14, modelicaParser::RuleBinary_minus);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(159);
    subtract();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Binary_logicalContext ------------------------------------------------------------------

modelicaParser::Binary_logicalContext::Binary_logicalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

modelicaParser::NegationContext* modelicaParser::Binary_logicalContext::negation() {
  return getRuleContext<modelicaParser::NegationContext>(0);
}


size_t modelicaParser::Binary_logicalContext::getRuleIndex() const {
  return modelicaParser::RuleBinary_logical;
}


antlrcpp::Any modelicaParser::Binary_logicalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitBinary_logical(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Binary_logicalContext* modelicaParser::binary_logical() {
  Binary_logicalContext *_localctx = _tracker.createInstance<Binary_logicalContext>(_ctx, getState());
  enterRule(_localctx, 16, modelicaParser::RuleBinary_logical);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(161);
    negation();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Binary_mdrContext ------------------------------------------------------------------

modelicaParser::Binary_mdrContext::Binary_mdrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

modelicaParser::MultiplyContext* modelicaParser::Binary_mdrContext::multiply() {
  return getRuleContext<modelicaParser::MultiplyContext>(0);
}

modelicaParser::DivideContext* modelicaParser::Binary_mdrContext::divide() {
  return getRuleContext<modelicaParser::DivideContext>(0);
}

modelicaParser::ModContext* modelicaParser::Binary_mdrContext::mod() {
  return getRuleContext<modelicaParser::ModContext>(0);
}


size_t modelicaParser::Binary_mdrContext::getRuleIndex() const {
  return modelicaParser::RuleBinary_mdr;
}


antlrcpp::Any modelicaParser::Binary_mdrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitBinary_mdr(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Binary_mdrContext* modelicaParser::binary_mdr() {
  Binary_mdrContext *_localctx = _tracker.createInstance<Binary_mdrContext>(_ctx, getState());
  enterRule(_localctx, 18, modelicaParser::RuleBinary_mdr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(166);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case modelicaParser::T__33: {
        setState(163);
        multiply();
        break;
      }

      case modelicaParser::T__34: {
        setState(164);
        divide();
        break;
      }

      case modelicaParser::T__49: {
        setState(165);
        mod();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Binary_asContext ------------------------------------------------------------------

modelicaParser::Binary_asContext::Binary_asContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

modelicaParser::AddContext* modelicaParser::Binary_asContext::add() {
  return getRuleContext<modelicaParser::AddContext>(0);
}

modelicaParser::SubtractContext* modelicaParser::Binary_asContext::subtract() {
  return getRuleContext<modelicaParser::SubtractContext>(0);
}


size_t modelicaParser::Binary_asContext::getRuleIndex() const {
  return modelicaParser::RuleBinary_as;
}


antlrcpp::Any modelicaParser::Binary_asContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitBinary_as(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Binary_asContext* modelicaParser::binary_as() {
  Binary_asContext *_localctx = _tracker.createInstance<Binary_asContext>(_ctx, getState());
  enterRule(_localctx, 20, modelicaParser::RuleBinary_as);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(170);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case modelicaParser::T__32: {
        setState(168);
        add();
        break;
      }

      case modelicaParser::T__9: {
        setState(169);
        subtract();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Binary_relContext ------------------------------------------------------------------

modelicaParser::Binary_relContext::Binary_relContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

modelicaParser::LtContext* modelicaParser::Binary_relContext::lt() {
  return getRuleContext<modelicaParser::LtContext>(0);
}

modelicaParser::Lt_equalContext* modelicaParser::Binary_relContext::lt_equal() {
  return getRuleContext<modelicaParser::Lt_equalContext>(0);
}

modelicaParser::Gt_equalContext* modelicaParser::Binary_relContext::gt_equal() {
  return getRuleContext<modelicaParser::Gt_equalContext>(0);
}

modelicaParser::GtContext* modelicaParser::Binary_relContext::gt() {
  return getRuleContext<modelicaParser::GtContext>(0);
}


size_t modelicaParser::Binary_relContext::getRuleIndex() const {
  return modelicaParser::RuleBinary_rel;
}


antlrcpp::Any modelicaParser::Binary_relContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitBinary_rel(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Binary_relContext* modelicaParser::binary_rel() {
  Binary_relContext *_localctx = _tracker.createInstance<Binary_relContext>(_ctx, getState());
  enterRule(_localctx, 22, modelicaParser::RuleBinary_rel);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(176);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case modelicaParser::T__36: {
        setState(172);
        lt();
        break;
      }

      case modelicaParser::T__39: {
        setState(173);
        lt_equal();
        break;
      }

      case modelicaParser::T__40: {
        setState(174);
        gt_equal();
        break;
      }

      case modelicaParser::T__35: {
        setState(175);
        gt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Binary_eqContext ------------------------------------------------------------------

modelicaParser::Binary_eqContext::Binary_eqContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

modelicaParser::EqualsContext* modelicaParser::Binary_eqContext::equals() {
  return getRuleContext<modelicaParser::EqualsContext>(0);
}

modelicaParser::Not_equalsContext* modelicaParser::Binary_eqContext::not_equals() {
  return getRuleContext<modelicaParser::Not_equalsContext>(0);
}


size_t modelicaParser::Binary_eqContext::getRuleIndex() const {
  return modelicaParser::RuleBinary_eq;
}


antlrcpp::Any modelicaParser::Binary_eqContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitBinary_eq(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Binary_eqContext* modelicaParser::binary_eq() {
  Binary_eqContext *_localctx = _tracker.createInstance<Binary_eqContext>(_ctx, getState());
  enterRule(_localctx, 24, modelicaParser::RuleBinary_eq);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(180);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case modelicaParser::T__37: {
        setState(178);
        equals();
        break;
      }

      case modelicaParser::T__38: {
        setState(179);
        not_equals();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ContContext ------------------------------------------------------------------

modelicaParser::ContContext::ContContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t modelicaParser::ContContext::getRuleIndex() const {
  return modelicaParser::RuleCont;
}


antlrcpp::Any modelicaParser::ContContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitCont(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::ContContext* modelicaParser::cont() {
  ContContext *_localctx = _tracker.createInstance<ContContext>(_ctx, getState());
  enterRule(_localctx, 26, modelicaParser::RuleCont);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(182);
    match(modelicaParser::T__10);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RetContext ------------------------------------------------------------------

modelicaParser::RetContext::RetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t modelicaParser::RetContext::getRuleIndex() const {
  return modelicaParser::RuleRet;
}


antlrcpp::Any modelicaParser::RetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitRet(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::RetContext* modelicaParser::ret() {
  RetContext *_localctx = _tracker.createInstance<RetContext>(_ctx, getState());
  enterRule(_localctx, 28, modelicaParser::RuleRet);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(184);
    match(modelicaParser::T__11);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- El_ifContext ------------------------------------------------------------------

modelicaParser::El_ifContext::El_ifContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t modelicaParser::El_ifContext::getRuleIndex() const {
  return modelicaParser::RuleEl_if;
}


antlrcpp::Any modelicaParser::El_ifContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitEl_if(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::El_ifContext* modelicaParser::el_if() {
  El_ifContext *_localctx = _tracker.createInstance<El_ifContext>(_ctx, getState());
  enterRule(_localctx, 30, modelicaParser::RuleEl_if);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(186);
    match(modelicaParser::T__12);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InputContext ------------------------------------------------------------------

modelicaParser::InputContext::InputContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t modelicaParser::InputContext::getRuleIndex() const {
  return modelicaParser::RuleInput;
}


antlrcpp::Any modelicaParser::InputContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitInput(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::InputContext* modelicaParser::input() {
  InputContext *_localctx = _tracker.createInstance<InputContext>(_ctx, getState());
  enterRule(_localctx, 32, modelicaParser::RuleInput);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(188);
    match(modelicaParser::T__13);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}
